# ezmetafetch

./: LICENSE  README.md  config.yaml  pyproject.toml
.github/workflows/: build.yml  ruff.yml  ruff_format.yml
example/input/: example_srp.txt
example/output/: fetch_result.tsv  search_uids.txt
src/ezmetafetch/: __init__.py  args_parser.py  base.py  run.py
