[tool.poetry]
name = "ezmetafetch"
version = "0.1.0"
description = "Simple tool for downloading metadata of EntrezAPI entries"
authors = ["shitohana"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.10.9"
aiohttp-retry = "^2.8.3"
pydantic = "^2.9.2"
lxml = "^5.3.0"
xmltodict = "^0.14.1"
pandas = "^2.2.3"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
